# wg

./: .gitignore  readme-fly.md  upstream-sync-workflow.md
alternative/fly-ts/: app.js  fly.toml
alternative/ts-cftunnel-docker/: Dockerfile  LICENSE
alternative/ts-traefik-gluetun-selfhosted/: Dockerfile.ts.wg-gluetun-litellm-db-prom  docker-traefik-tailscale-selfhosted-PROD+Home.md
docs/: README-OCI.md  agentic-workflow-example.md  agentic-workflow-summary.md  create-pubpriv-keypairs.md  lockdown-privserver-tsSSH-only.md  oci-firewall-publicapp-subnets.md  oci-ts-vm-guide.md  ts-core-modules-integrate-grafana-prom.md  ts-docker.md  ts-remoteaccess-rustdesk.md
docs/traefik-docker-etc/: traefik-doc-tlscert-tailscale.md  traefik-docker.md  ts-clscert-with-traefik.md  ts-docker.md
docs/ts-cftunnel-automated/: cfpublic-tsprivate-automated-docker.md  tailscale_cloudfaretunnel.yml
docs/ts-flyio-flyprivatemach/: Dockerfile  README.md  app.js  package.json
docs/ts-vpc-oci-gcp/: Dockerfile.ts.cloudrun  tailscale-oracle-vm.md
docs/ts_fly-oci-gcp-modal/: tailscale-fly.md  ts-azure-appservice.md  ts-azure-vm.md  ts-cloudrun.md  ts-goog-vm.md
fly-ts/: README.md  start.sh
oracle-ts/docs/: docs-README.md  modal-entrypoint.sh  multi-cloud-agentic-flow.md  setup-steps.md
scripts/: cfg.sh
tailscale/: tailscale.py
utils/: network_utils.py  security_middleware.py
vpn-automation/: .gitignore  README.md
vpn-automation/client/src-tauri/: Cargo.toml  tauri.conf.json
vpn-automation/client/src-tauri/src/: api_client.rs  main.rs  network.rs  wg_manager.rs
(+31 files in other folders)
